// Crypto Strategy Lab — Database Schema
// PostgreSQL + TimescaleDB
// Updated for: User Authentication, Strategy Library, Candidates,
// Weighted Strategy Composition, AI-generated Python Strategies.

Project crypto_strategy_lab {
  database_type: "PostgreSQL"
  Note: "TimescaleDB is used for the candles hypertable. See README (Database).md for migration notes and application-level constraints."
}

// ============================================================
// ENUMS
// ============================================================

Enum user_status {
  ACTIVE
  INACTIVE
  SUSPENDED
}

Enum strategy_type {
  SYSTEM
  USER
  AI_GENERATED
}

Enum strategy_language {
  TYPESCRIPT
  PYTHON
  OTHER
}

Enum candidate_status {
  DRAFT
  READY
  RUNNING
  COMPLETED
  FAILED
}

Enum experiment_status {
  PENDING
  RUNNING
  COMPLETED
  FAILED
  CANCELLED
}

Enum iteration_status {
  PENDING
  RUNNING
  COMPLETED
  FAILED
}

Enum backtest_status {
  PENDING
  RUNNING
  COMPLETED
  FAILED
}

Enum trade_side {
  LONG
  SHORT
}

Enum exit_reason {
  SIGNAL
  STOP_LOSS
  TAKE_PROFIT
  END_OF_BACKTEST
}

Enum timeframe {
  "1m"
  "5m"
  "15m"
  "1h"
  "4h"
}

Enum sentiment_label {
  POSITIVE
  NEUTRAL
  NEGATIVE
}

// ============================================================
// USERS / AUTHENTICATION
// ============================================================

Table users {
  id uuid [pk]
  email varchar(255) [not null, unique]
  password_hash text [not null]
  display_name varchar(100)
  status user_status [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "Authenticated application users. Never store plaintext passwords."
}

Table refresh_tokens {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  token_hash text [not null, unique]
  expires_at timestamptz [not null]
  revoked_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    user_id
    expires_at
  }
}

// ============================================================
// SHARED MARKET DATA
// ============================================================

Table candles {
  timeframe timeframe [not null]
  timestamp timestamptz [not null]
  open numeric(30,12) [not null]
  high numeric(30,12) [not null]
  low numeric(30,12) [not null]
  close numeric(30,12) [not null]
  volume numeric(30,12) [not null]

  Indexes {
    (timeframe, timestamp) [pk]
  }

  Note: "Shared Binance BTCUSDT OHLCV data. Convert to a TimescaleDB hypertable on timestamp in migration."
}

// ============================================================
// STRATEGIES
// ============================================================

Table strategies {
  id uuid [pk]
  owner_user_id uuid [ref: > users.id]
  name varchar(255) [not null]
  type strategy_type [not null]
  version int [not null, default: 1]
  description text
  language strategy_language
  source_code text
  parameters jsonb [not null, default: '{}']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    owner_user_id
    (name, version)
    type
  }

  Note: "Immutable strategy versions should be created for changes. SYSTEM strategies have no owner; USER and AI_GENERATED strategies require an authenticated owner."
}

// ============================================================
// EXPERIMENTS & SEARCH CONFIGURATION
// ============================================================

Table experiments {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  name varchar(255)
  status experiment_status [not null, default: 'PENDING']
  started_at timestamptz
  completed_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    user_id
    status
  }
}

Table experiment_configs {
  id uuid [pk]
  experiment_id uuid [not null, unique, ref: - experiments.id]
  timeframe timeframe [not null]
  start_time timestamptz [not null]
  end_time timestamptz [not null]
  iteration_limit int [not null, default: 10]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    experiment_id [unique]
    (timeframe, start_time, end_time)
  }

  Note: "Immutable Search Configuration. Changing timeframe, timestamp range, selected strategies, weight ratio, or another search setting creates a new Experiment."
}

Table experiment_config_strategies {
  id uuid [pk]
  experiment_config_id uuid [not null, ref: > experiment_configs.id]
  strategy_id uuid [not null, ref: > strategies.id]
  weight numeric(8,6) [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (experiment_config_id, strategy_id) [unique]
    experiment_config_id
    strategy_id
  }

  Note: "Selected individual strategies and their weight ratio. Enforce weight >= 0 and SUM(weight) = 1."
}

// ============================================================
// SEARCH ITERATIONS
// ============================================================

Table experiment_iterations {
  id uuid [pk]
  experiment_id uuid [not null, ref: > experiments.id]
  iteration_number int [not null]
  status iteration_status [not null, default: 'PENDING']
  started_at timestamptz
  completed_at timestamptz
  error_message text
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (experiment_id, iteration_number) [unique]
    experiment_id
    status
  }

  Note: "Each iteration produces exactly one Candidate."
}

// ============================================================
// CANDIDATES
// ============================================================

Table candidates {
  id uuid [pk]
  iteration_id uuid [not null, unique, ref: - experiment_iterations.id]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    iteration_id [unique]
  }

  Note: "One Candidate is the result of one Search Engine iteration."
}

Table candidate_strategies {
  id uuid [pk]
  candidate_id uuid [not null, ref: > candidates.id]
  strategy_id uuid [not null, ref: > strategies.id]
  parameters jsonb [not null, default: '{}']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (candidate_id, strategy_id) [unique]
    candidate_id
    strategy_id
  }

  Note: "Stores concrete Search Engine-generated parameters for the selected Strategy. Weight is stored in experiment_config_strategies because it is a Search Configuration setting shared by all Candidates in the Experiment."
}

// ============================================================
// BACKTEST EXECUTION
// ============================================================

Table backtest_runs {
  id uuid [pk]
  candidate_id uuid [not null, unique, ref: - candidates.id]
  status backtest_status [not null, default: 'PENDING']
  started_at timestamptz
  completed_at timestamptz
  error_message text
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    candidate_id [unique]
    status
  }

  Note: "Background backtest execution for a generated Candidate."
}

Table trades {
  id uuid [pk]
  backtest_run_id uuid [not null, ref: > backtest_runs.id]
  side trade_side [not null]
  entry_time timestamptz [not null]
  entry_price numeric(30,12) [not null]
  quantity numeric(30,12) [not null]
  stop_loss numeric(30,12)
  take_profit numeric(30,12)
  exit_time timestamptz
  exit_price numeric(30,12)
  profit_loss numeric(30,12)
  return_pct numeric(12,6)
  exit_reason exit_reason
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    backtest_run_id
    (backtest_run_id, entry_time)
  }
}

Table evaluations {
  id uuid [pk]
  backtest_run_id uuid [not null, unique, ref: - backtest_runs.id]
  total_return numeric(18,8)
  profit_loss numeric(30,12)
  win_rate numeric(10,6)
  max_drawdown numeric(18,8)
  number_of_trades int [not null, default: 0]
  profit_factor numeric(18,8)
  sharpe_ratio numeric(18,8)
  overall_score numeric(18,8)
  created_at timestamptz [not null, default: `now()`]

  Note: "Evaluation is produced after the background backtest completes."
}

// ============================================================
// LEADERBOARD
// ============================================================

Table leaderboards {
  id uuid [pk]
  experiment_id uuid [not null, unique, ref: - experiments.id]
  name varchar(255) [not null, default: 'Search Leaderboard']
  top_k int [not null, default: 10]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: "One leaderboard per Experiment. Changing Search Configuration creates a new Experiment and therefore a new Leaderboard; +10 iterations keeps the same Leaderboard."
}

Table leaderboard_entries {
  id uuid [pk]
  leaderboard_id uuid [not null, ref: > leaderboards.id]
  candidate_id uuid [not null, ref: > candidates.id]
  rank int [not null]
  score numeric(18,8) [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (leaderboard_id, candidate_id) [unique]
    (leaderboard_id, rank) [unique]
    leaderboard_id
  }
}

// ============================================================
// NEWS / SENTIMENT
// Optional relational representation if the project later moves
// news from NoSQL into PostgreSQL.
// ============================================================

Table news {
  id uuid [pk]
  title text [not null]
  content text
  source varchar(255)
  published_at timestamptz
  crawled_at timestamptz [not null, default: `now()`]
  url text [unique]
  sentiment sentiment_label
  sentiment_score numeric(8,6)

  Indexes {
    published_at
    source
    sentiment
  }

  Note: "Current project may keep news in NoSQL. This table is optional and should not be created if NoSQL remains the selected storage."
}